# Canvas-AI

./: .env.dist  .env.example  .gitignore  CanvasAI.bat  README.md  SELLING.md  pyproject.toml  setup.ps1  setup.sh  voice.example.txt  voice.txt  wrangler.jsonc
canvas_ai/: __init__.py  cli.py  config.py  desktop.py  license.py  settings.py  voice.py
canvas_ai/agent/: __init__.py  gates.py  loop.py  tools.py
canvas_ai/browser/: __init__.py  session.py
canvas_ai/canvas/: __init__.py  assignments.py  client.py  cookie_client.py  courses.py  discussions.py  files.py  pages.py  quiz_browser.py  quizzes.py
canvas_ai/extract/: __init__.py  browser.py  documents.py  embedded.py  html.py
canvas_ai/llm/: __init__.py  anthropic.py  base.py  claude_code.py  ollama.py
canvas_ai/web/: __init__.py  app.py
canvas_ai/web/static/: app.js  index.html  styles.css
macos/: CanvasAI.entitlements  Info.plist  README.md  project.yml
macos/CanvasAI/: Anthropic.swift  AppState.swift  CanvasAIApp.swift  CanvasAPI.swift  ContentView.swift  Models.swift
macos/Sources/: API.swift  CanvasAIApp.swift  ContentView.swift  HTMLView.swift  Models.swift  ReaderView.swift  TabsViews.swift
marketing/: landing.html  make_images.py
tests/: test_smoke.py
website/: README.md  index.html  privacy.html  refund.html  style.css  terms.html
windows/: CanvasAI.spec  README.md  build.ps1  create-shortcut.ps1  installer.iss  launch.py  make_icon.py  run.ps1
